[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
clap = { version = "3.1.15", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.16"
once_cell = "1.10.0"
rand = "0.8.5"
serde = { version = "1.0.137", features = ["serde_derive"] }
serde_yaml = "0.8.23"
sled = "0.34.7"
tokio = { version = "1", features = ["winapi", "net", "test-util", "full"] }

[lib]
path = "src/lib.rs"
